0.219 2023-06-03
  [New Features]
    * Add IO::Socket#accept method. This has existed, but not documented.
    * Add IO::Socket::IP#accept method.
    * Add IO::Socket::UNIX#accept method.
0.218 2023-06-03
  [Requirement Changes]
    * Require SPVM::Sys 0.520.
0.217 2023-06-01
  [New Features]
    * Add IO::Socket#sendto method.
    * Add IO::Socket#recvfrom method.
  [Test Improvement]
    * Add tests for IO::Select using a test HTTP server.
  [Incompatible Changes]
    * Remove an argument of IO::Socket#shutdown method.
      [Before]
      method shutdown : void ($sockfd : int, $how : int);
      
      [After]
      method shutdown : void ($how : int);
    * IO::Socket#close method throw an excetpion if the socket is not opened.
    * Remove IO::Socket#peername field. The return value of peername method is not cached.
    * Remove the argument $to of IO::Socket#send method.
      [Before]
      method send : int ($buffer : string, $flags : int = 0, $to : Sys::Socket::Sockaddr = undef, $length : int = -1, $buf_offset : int = 0);
      [After]
      method send : int ($buffer : string, $flags : int = 0, $length : int = -1, $buf_offset : int = 0);
  [Changes]
    * The following method in IO::Socket class becomes public.
      
      socket
      connect
      listen
      bind
      accept
  [Requirement Changes]
    * Require SPVM::Sys 0.517.

0.216 2023-05-29
  [Requirement Changes]
    * Require SPVM::Sys 0.516.
  [New Features]
    * Add IO::Poll class.
0.215 2023-05-24
  [New Features]
    * Add IO::Dir class.
  [Requirement Changes]
    * Require SPVM::Sys 0.515.
    
0.214 2023-05-21
  [Imcompatible Changes]
    * handles field in IO::Select is renamed to fds_list.
    * The type of add method in IO::Select is changed from int to void.
    * The type of remove method in IO::Select is changed from int to void.
    * handles method in IO::Select is renamed to fds.
  [New Features]
    * Add count method to IO::Select class.