@@ -17,4 +17,7 @@ class IO::Socket::INET extends IO::Socket::IP {
     return $self;
   }
   
+  method accept : IO::Socket::INET ($peer_ref : Sys::Socket::Sockaddr[] = undef) {
+    return (IO::Socket::INET)$self->SUPER::accept($peer_ref);
+  }
 }
