@@ -15,4 +15,8 @@ class IO::Socket::INET6 extends IO::Socket::IP {
     
     return $self;
   }
+  
+  method accept : IO::Socket::INET6 ($peer_ref : Sys::Socket::Sockaddr[] = undef) {
+    return (IO::Socket::INET6)$self->SUPER::accept($peer_ref);
+  }
 }
