@@ -2,6 +2,8 @@
   [New Features]
     * Add IO::Socket#accept method. This has existed, but not documented.
     * Add IO::Socket::IP#accept method.
+    * Add IO::Socket::INET#accept method.
+    * Add IO::Socket::INET6#accept method.
     * Add IO::Socket::UNIX#accept method.
 0.218 2023-06-03
   [Requirement Changes]
